--- a/cim.html
+++ b/cim.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Cím</title>
+    <title>CÃ­m</title>
     <style>
         body {
             margin: 0;
@@ -25,8 +25,8 @@
 </head>
 <body>
     <div>
-        <p>"A béke bõséget teremt. A bõség büszkeséget.</p><p>A büszkeség megvetést. A megvetés háborút. A háború nyomort. A nyomor alázatosságot. Az alázatosság békét."</p>
-        <p>Az örök körforgás</p>
+        <p>"A bÃ©ke bÅ‘sÃ©get teremt. A bÅ‘sÃ©g bÃ¼szkesÃ©get.</p><p>A bÃ¼szkesÃ©g megvetÃ©st. A megvetÃ©s hÃ¡borÃºt. A hÃ¡borÃº nyomort. A nyomor alÃ¡zatossÃ¡got. Az alÃ¡zatossÃ¡g bÃ©kÃ©t."</p>
+        <p>Az Ã¶rÃ¶k kÃ¶rforgÃ¡s</p>
     </div>
 </body>
 </html>
