--- a/fomenu.html
+++ b/fomenu.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Fõmenü</title>
+    <title>FÅ‘menÃ¼</title>
     <style>
         body {
             margin: 0;
@@ -56,32 +56,32 @@
 </head>
 <body>
     <div class="container">
-        <div class="title">Kékkõi László</div>
+        <div class="title">KÃ©kkÅ‘i LÃ¡szlÃ³</div>
         <div class="images">
             <img src="hyena.jpg" alt="Hyena">
             <div>
-                <div class="last-update">Utolsó frissítés:<br>2007.01.02<br>2024.12.22 :)</div>
+                <div class="last-update">UtolsÃ³ frissÃ­tÃ©s:<br>2007.01.02<br>2024.12.22 :)</div>
                 <img src="en.jpg" alt="Profile">
             </div>
         </div>
         <div class="quote">"Csak azt adhatom, ami vagyok."</div>
         <div class="text">
-            A vándor örökké úton van. Nem lel seholsem hazát.<br>
-            Úgy vagyunk mint levél a szélben. Nem sejtjük merre visz a sorsunk. Egyetlen életetõnk a hitünk.<br>
-            Egyetlen vigasztalónk a remény. Így lesz gazdaggá életünk és így tesszük gazdagabbá mások életét.<br>
-            Bár a rossz néha könyörtelenül leigáz mégis küzdünk ellene. Sorsunk létezik mégsem állandó.<br>
-            Magunk alakítjuk és ismerjük meg. Furcsa kettõsség ez mely embertársainknak érthetetlennek tûnik.<br>
-            Tanítunk szavakkal de el is ítéljük õket. Néha összeroppanunk, máskor tettre készen várjuk a kihívásokat.<br>
-            Félünk is, meg nem is. Félünk, ha tetteinkkel eltávolodunk a legfelfedettebb igazságunktól, Istentõl.<br>
-            Próbáljuk megérteni de gyakran rosszul feltételezzük igazát. Õ számunkra az alap.<br>
-            Õ számunkra az egység és a végtelen. Õ az akit keresünk.<br>
-            Keressük éjjel-nappal. Megrengetve elméleteket, de soha le nem rombolva õket tesszük lépéseinket.<br>
-            A múltba és jövõbe nézünk egyszerre. Nyugalmat lelünk az éjszakában.<br>
-            Felejtjük néhai magányunkat. Talán megtett lépéseink nem hiábavalóak.<br>
-            Hiszünk benne, hogy meg fogjuk találni egyszer az igazságot. Meg fogja találni mindenki.<br>
-            Az idõ nagy ellenségnek tûnik, de mi vele élünk. Valamennyiére átérezzük rejtett misztériumát.<br>
-            Mert a hit nem hal meg, a hit örök. Lelkünk pecsétjé hitünknek és megváltottságunknak.<br>
-            Ez mely minden emberben benne van a kezdetektõl fogva. Hisz az igaz ember a lélek.
+            A vÃ¡ndor Ã¶rÃ¶kkÃ© Ãºton van. Nem lel seholsem hazÃ¡t.<br>
+            Ãšgy vagyunk mint levÃ©l a szÃ©lben. Nem sejtjÃ¼k merre visz a sorsunk. Egyetlen Ã©letetÅ‘nk a hitÃ¼nk.<br>
+            Egyetlen vigasztalÃ³nk a remÃ©ny. Ãgy lesz gazdaggÃ¡ Ã©letÃ¼nk Ã©s Ã­gy tesszÃ¼k gazdagabbÃ¡ mÃ¡sok Ã©letÃ©t.<br>
+            BÃ¡r a rossz nÃ©ha kÃ¶nyÃ¶rtelenÃ¼l leigÃ¡z mÃ©gis kÃ¼zdÃ¼nk ellene. Sorsunk lÃ©tezik mÃ©gsem Ã¡llandÃ³.<br>
+            Magunk alakÃ­tjuk Ã©s ismerjÃ¼k meg. Furcsa kettÅ‘ssÃ©g ez mely embertÃ¡rsainknak Ã©rthetetlennek tÅ±nik.<br>
+            TanÃ­tunk szavakkal de el is Ã­tÃ©ljÃ¼k Å‘ket. NÃ©ha Ã¶sszeroppanunk, mÃ¡skor tettre kÃ©szen vÃ¡rjuk a kihÃ­vÃ¡sokat.<br>
+            FÃ©lÃ¼nk is, meg nem is. FÃ©lÃ¼nk, ha tetteinkkel eltÃ¡volodunk a legfelfedettebb igazsÃ¡gunktÃ³l, IstentÅ‘l.<br>
+            PrÃ³bÃ¡ljuk megÃ©rteni de gyakran rosszul feltÃ©telezzÃ¼k igazÃ¡t. Å szÃ¡munkra az alap.<br>
+            Å szÃ¡munkra az egysÃ©g Ã©s a vÃ©gtelen. Å az akit keresÃ¼nk.<br>
+            KeressÃ¼k Ã©jjel-nappal. Megrengetve elmÃ©leteket, de soha le nem rombolva Å‘ket tesszÃ¼k lÃ©pÃ©seinket.<br>
+            A mÃºltba Ã©s jÃ¶vÅ‘be nÃ©zÃ¼nk egyszerre. Nyugalmat lelÃ¼nk az Ã©jszakÃ¡ban.<br>
+            FelejtjÃ¼k nÃ©hai magÃ¡nyunkat. TalÃ¡n megtett lÃ©pÃ©seink nem hiÃ¡bavalÃ³ak.<br>
+            HiszÃ¼nk benne, hogy meg fogjuk talÃ¡lni egyszer az igazsÃ¡got. Meg fogja talÃ¡lni mindenki.<br>
+            Az idÅ‘ nagy ellensÃ©gnek tÅ±nik, de mi vele Ã©lÃ¼nk. ValamennyiÃ©re Ã¡tÃ©rezzÃ¼k rejtett misztÃ©riumÃ¡t.<br>
+            Mert a hit nem hal meg, a hit Ã¶rÃ¶k. LelkÃ¼nk pecsÃ©tjÃ© hitÃ¼nknek Ã©s megvÃ¡ltottsÃ¡gunknak.<br>
+            Ez mely minden emberben benne van a kezdetektÅ‘l fogva. Hisz az igaz ember a lÃ©lek.
         </div>
     </div>
 </body>
