--- a/korszakok.htm
+++ b/korszakok.htm
@@ -1,51 +1,85 @@
-<html>
-
-<head>
-<title>Korszakaim</title>
-</head>
-
-<body bgcolor="#000000" lang=HU style="tab-interval: 35.4pt"><!-- ADDFREESTATS.COM CODE V2 (Framed Page) --><!-- CODE FOR YOUR PAGE: The Necromancer     --><!-- URL : http://www.freeweb.hu/blackevil/necro.htm  --><!-- PAGE NUMBER :1  -->
-<font color="#008000">
-<H1>Korszakok elõtti idõszak</H1>
-<H4>Indító és meghatározó mû: Gondolat (Jelenleg még nem vittem fel)</H4>
-Nem tudom miként bontakozik ki a természet a korai tavaszi napok alatt, de hiszem, minden misztérium
-mögött egyetlen jel lakozik, a kezdet láthatatlan érintése. Saját életem emlékei között nyugszik
-az õsi felismerés, hogy nincsenek határok a gondolat szabadsága elõtt. Valódi, megbonthatatlan életerõt szereztem egész földi
-pályafutásomra és az ég nem tûnt többé  messzinek, sem a világ idegennek. A teremetés legfontosabb princípiumát azóta is
-õrzöm és magammal viszem a borongós elmúlás küszöbéhez, ha eljön értem a nyugalmat hozó.
-<br>
-<H1>I. korszak: Az elhulott rózsák</H1>
-<H4>Indító mû: Himnusz (lásd versek között)</H4>
-<H4>Lezáró mû: Égõ fõnixmadár (lásd versek között), I. Számadás (lásd novellák között)</H4>
-Középiskolai élményeim tükrözõdnek verseimben, novelláimban és a tanítás képei uralják az elsõ mûveket, de
-lassan, mint gyilkos méreg, a szilárdnak hitt értékrendemet megfertõzi a kétely. A bölcseletet felváltja a vándorlás
-és a vak remény keresése. A magányos küzdelemben elevenednek meg jelképeim, hogy a sodrás mindent felborító
-ereje ne szakítson el igaznak vélt hitemtõl.<br><br>
-Oroszlán: igazság<br>
-Kigyó: megszállottság<br>
-Hiéna: alázatosság<br>
-Sólyom: sors<br>
-Fekete párduc: idõ<br>
-Fekete sárkány: végtelen<br>
-A korszak utolsó szimbóluma: Arany sárkány: remény, boldogság<br>
-<H1>II. korszak: Töredékek</H1>
-<H4>Indító mû: Kövek a folyóban (lásd novellák között)</H4>
-<H4>Lezáró mû: II. Számadás (Jelenleg még nem vittem fel)</H4>
-A háború mindent elemésztett. Szétmarcangolt személyiség, üres tekintet, beletörõdés, önfeladás.
-Menedéket kerestem egy kettõs világban. Miközben a hétköznapok szürkeségét vetem papírra, párhuzamosan
-elevenedik meg az emberi képzelet világa, hogy magyarázatot találjon a kérdések ezreire. Elszakadnak a tartókötelek
-és keresem a kapaszkodót.
-<H1>III. korszak: Fények a messzeségben</H1>
-<H4>Indító mû: Fények a messzeségben (Jelenleg még nem vittem fel</H4>
-<H4>Lezáró mû: ?</H4>
-A haldokló ember tekintete új sorsot épít ki bennem. A szavak elvesztik hatalmukat és a beszéd feledésbe merül.
-Mindent elhagyok, hogy megtaláljam a végsõ igazságot...
-<H1>IV. korszak (utolsó): Az aranysárkány ébredése</H1>
-<H4>Indító mû és egyben lezáró mû: Az aranysárkány ébredése</H4>
-Nem találom a megfelelõ szavakat. Talán bizonyos értelemben nem is lehet megfogalmazni mit jelent számomra
-az aranysárkány ébredése. Az örök fény és világosság, amiben az ember megtalálhatja reményeinek beteljesülését.
-Leküzd minden akadályt és minden szenvedést. Felemel és megbocsájtja minden vétkemet. Isten áldása legyen rajtatok!
-</font>
-</body>
-
-</html>
+<html>
+<head>
+<title>Korszakaim</title>
+</head>
+<body bgcolor="#000000" lang=HU style="tab-interval: 35.4pt"><!-- ADDFREESTATS.COM CODE V2 (Framed Page) --><!-- CODE FOR YOUR PAGE: The Necromancer     --><!-- URL : http://www.freeweb.hu/blackevil/necro.htm  --><!-- PAGE NUMBER :1  -->
+<font color="#008000">
+<H1>Korszakok elÅ‘tti idÅ‘szak</H1>
+<H4>IndÃ­tÃ³ Ã©s meghatÃ¡rozÃ³ mÅ±: Gondolat (Jelenleg mÃ©g nem vittem fel)</H4>
+Nem tudom mikÃ©nt bontakozik ki a termÃ©szet a korai tavaszi napok alatt, de hiszem, minden misztÃ©rium
+mÃ¶gÃ¶tt egyetlen jel lakozik, a kezdet lÃ¡thatatlan Ã©rintÃ©se. SajÃ¡t Ã©letem emlÃ©kei kÃ¶zÃ¶tt nyugszik
+az Å‘si felismerÃ©s, hogy nincsenek hatÃ¡rok a gondolat szabadsÃ¡ga elÅ‘tt. ValÃ³di, megbonthatatlan Ã©leterÅ‘t szereztem egÃ©sz fÃ¶ldi
+pÃ¡lyafutÃ¡somra Ã©s az Ã©g nem tÅ±nt tÃ¶bbÃ©  messzinek, sem a vilÃ¡g idegennek. A teremetÃ©s legfontosabb princÃ­piumÃ¡t azÃ³ta is
+Å‘rzÃ¶m Ã©s magammal viszem a borongÃ³s elmÃºlÃ¡s kÃ¼szÃ¶bÃ©hez, ha eljÃ¶n Ã©rtem a nyugalmat hozÃ³.
+<br>
+
+<H1>I. korszak: Az elhulott rÃ³zsÃ¡k</H1>
+
+<H4>IndÃ­tÃ³ mÅ±: Himnusz (lÃ¡sd versek kÃ¶zÃ¶tt)</H4>
+
+<H4>LezÃ¡rÃ³ mÅ±: Ã‰gÅ‘ fÅ‘nixmadÃ¡r (lÃ¡sd versek kÃ¶zÃ¶tt), I. SzÃ¡madÃ¡s (lÃ¡sd novellÃ¡k kÃ¶zÃ¶tt)</H4>
+
+KÃ¶zÃ©piskolai Ã©lmÃ©nyeim tÃ¼krÃ¶zÅ‘dnek verseimben, novellÃ¡imban Ã©s a tanÃ­tÃ¡s kÃ©pei uraljÃ¡k az elsÅ‘ mÅ±veket, de
+
+lassan, mint gyilkos mÃ©reg, a szilÃ¡rdnak hitt Ã©rtÃ©krendemet megfertÅ‘zi a kÃ©tely. A bÃ¶lcseletet felvÃ¡ltja a vÃ¡ndorlÃ¡s
+
+Ã©s a vak remÃ©ny keresÃ©se. A magÃ¡nyos kÃ¼zdelemben elevenednek meg jelkÃ©peim, hogy a sodrÃ¡s mindent felborÃ­tÃ³
+
+ereje ne szakÃ­tson el igaznak vÃ©lt hitemtÅ‘l.<br><br>
+
+OroszlÃ¡n: igazsÃ¡g<br>
+
+KigyÃ³: megszÃ¡llottsÃ¡g<br>
+
+HiÃ©na: alÃ¡zatossÃ¡g<br>
+
+SÃ³lyom: sors<br>
+
+Fekete pÃ¡rduc: idÅ‘<br>
+
+Fekete sÃ¡rkÃ¡ny: vÃ©gtelen<br>
+
+A korszak utolsÃ³ szimbÃ³luma: Arany sÃ¡rkÃ¡ny: remÃ©ny, boldogsÃ¡g<br>
+
+<H1>II. korszak: TÃ¶redÃ©kek</H1>
+
+<H4>IndÃ­tÃ³ mÅ±: KÃ¶vek a folyÃ³ban (lÃ¡sd novellÃ¡k kÃ¶zÃ¶tt)</H4>
+
+<H4>LezÃ¡rÃ³ mÅ±: II. SzÃ¡madÃ¡s (Jelenleg mÃ©g nem vittem fel)</H4>
+
+A hÃ¡borÃº mindent elemÃ©sztett. SzÃ©tmarcangolt szemÃ©lyisÃ©g, Ã¼res tekintet, beletÃ¶rÅ‘dÃ©s, Ã¶nfeladÃ¡s.
+
+MenedÃ©ket kerestem egy kettÅ‘s vilÃ¡gban. MikÃ¶zben a hÃ©tkÃ¶znapok szÃ¼rkesÃ©gÃ©t vetem papÃ­rra, pÃ¡rhuzamosan
+
+elevenedik meg az emberi kÃ©pzelet vilÃ¡ga, hogy magyarÃ¡zatot talÃ¡ljon a kÃ©rdÃ©sek ezreire. Elszakadnak a tartÃ³kÃ¶telek
+
+Ã©s keresem a kapaszkodÃ³t.
+
+<H1>III. korszak: FÃ©nyek a messzesÃ©gben</H1>
+
+<H4>IndÃ­tÃ³ mÅ±: FÃ©nyek a messzesÃ©gben (Jelenleg mÃ©g nem vittem fel</H4>
+
+<H4>LezÃ¡rÃ³ mÅ±: ?</H4>
+
+A haldoklÃ³ ember tekintete Ãºj sorsot Ã©pÃ­t ki bennem. A szavak elvesztik hatalmukat Ã©s a beszÃ©d feledÃ©sbe merÃ¼l.
+
+Mindent elhagyok, hogy megtalÃ¡ljam a vÃ©gsÅ‘ igazsÃ¡got...
+
+<H1>IV. korszak (utolsÃ³): Az aranysÃ¡rkÃ¡ny Ã©bredÃ©se</H1>
+
+<H4>IndÃ­tÃ³ mÅ± Ã©s egyben lezÃ¡rÃ³ mÅ±: Az aranysÃ¡rkÃ¡ny Ã©bredÃ©se</H4>
+
+Nem talÃ¡lom a megfelelÅ‘ szavakat. TalÃ¡n bizonyos Ã©rtelemben nem is lehet megfogalmazni mit jelent szÃ¡momra
+
+az aranysÃ¡rkÃ¡ny Ã©bredÃ©se. Az Ã¶rÃ¶k fÃ©ny Ã©s vilÃ¡gossÃ¡g, amiben az ember megtalÃ¡lhatja remÃ©nyeinek beteljesÃ¼lÃ©sÃ©t.
+
+LekÃ¼zd minden akadÃ¡lyt Ã©s minden szenvedÃ©st. Felemel Ã©s megbocsÃ¡jtja minden vÃ©tkemet. Isten Ã¡ldÃ¡sa legyen rajtatok!
+
+</font>
+
+</body>
+
+
+
+</html>
+
