--- a/versek.html
+++ b/versek.html
@@ -3,7 +3,7 @@
 	<title>Versek</title>
 </head>
 <body bgcolor="#000000" link="#008000" vlink="#00FF00" alink="#008000">
-
+<meta charset="UTF-8">
 <font color="#008000">
 <H1>I. Korszak versei: "Az elhullott rózsák"</H1></STRONG>
 <A name=eleje></a>
